# applied-computing-foundations

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  SE_MANIFEST.toml  mkdocs.yaml  pyproject.toml
.github/workflows/: ci-hygiene-mkdocs.yml  deploy-mkdocs.yml
docs/: glossary.md  how_to_take_screenshots.md  index.md  repos_on_mac_linux.md  repos_on_windows.md
