# ============================================================
# pyproject.toml (Python and MkDocs project configuration)
# ============================================================

# REQ.PYTHON: Python projects MUST include pyproject.toml as the single source of truth.
# WHY: Centralizes project configuration.

[project]
name = "applied-computing-foundations"
version = "0.0.0"
description = "Documentation for computing foundations."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Denise Case", email = "dcase@nwmissouri.edu" }]
dependencies = []

[project.optional-dependencies]
dev = [
    # REQ.DEV.DEPS: External packages used for linting, testing, type checking, etc.
    "pre-commit>=4",
    "validate-pyproject>=0.11.0",
]
docs = [
    # REQ.DOCS.DEPS: External packages used to generate project documentation.
    "mike>=2.1.3",
    "mkdocs>=1.5",
    "mkdocs-gen-files>=0.7.0",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-include-markdown-plugin",
    "mkdocs-literate-nav",
    "mkdocs-material>=9",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocstrings[python]>=1.0.0",
    "pymdown-extensions",
    "ruff",
]

[project.urls]
"Home" = "https://denisecase.github.io/applied-computing-foundations/"
"Repo" = "https://github.com/denisecase/applied-computing-foundations"
"Issues" = "https://github.com/denisecase/applied-computing-foundations/issues"

[tool.uv]
package = false # REQ.UV: Disable universal versioning for non-packages.
# WHY: This project is not intended to be distributed as a package.
