# ============================================================
# pyproject.toml (Python and MkDocs project configuration)
# ============================================================

# REQ.PYTHON: Python projects MUST include pyproject.toml as the single source of truth.
# WHY: Centralizes project configuration.

[project]
name = "applied-computing-foundations"
version = "0.0.0"
description = "Documentation for computing foundations."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Denise Case", email = "dcase@nwmissouri.edu" }]
dependencies = []

[project.optional-dependencies]
dev = [
    # REQ.DEV.DEPS: External packages used for linting, testing, type checking, etc.
    "pre-commit>=4.5.1",
    "validate-pyproject>=0.24.1",
]
docs = [
    # REQ.DOCS.DEPS: External packages used to generate project documentation.
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-git-revision-date-localized-plugin >=1.5.0",
    "mkdocs-include-markdown-plugin>=7.2.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.7.1",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocstrings[python]>=1.0.0",
    "pymdown-extensions>=10.20",
    "ruff>=0.14.10",
]

[project.urls]
"Home" = "https://denisecase.github.io/applied-computing-foundations/"
"Repo" = "https://github.com/denisecase/applied-computing-foundations"
"Issues" = "https://github.com/denisecase/applied-computing-foundations/issues"

[tool.uv]
package = false # REQ.UV: Disable universal versioning for non-packages.
# WHY: This project is not intended to be distributed as a package.
